# zabbix-automation-demo

./: .env-sample  .gitignore  README.md  ansible.cfg  pyproject.toml
collections/: requirements.yml
inventory/: netbox.yml
inventory/group_vars/all/: all.yml
inventory/group_vars/netbox/: all.yml
playbooks/: sync-zabbix.yml
roles/sync_zabbix/defaults/: main.yml
roles/sync_zabbix/handlers/: main.yml
roles/sync_zabbix/meta/: main.yml
roles/sync_zabbix/tasks/: main.yml  switch-config.yml  zabbix-config.yml  zabbix-hosts.yml
roles/sync_zabbix/templates/: no_snmp_stations.j2  snmp_stations.j2
roles/sync_zabbix/tests/: test.yml
roles/sync_zabbix/vars/: main.yml
